added USERNAME to config.ini

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [IDENTIFICATION]
 # Set your user agent string here.
-USERAGENT = DEFAULT AGENT
+USERAGENT = IR UF22 92602428,61177732,36935301
 
 [CONNECTION]
 HOST = styx.ics.uci.edu
