made save state changes.

--- a/config.ini
+++ b/config.ini
@@ -14,8 +14,14 @@ POLITENESS = 0.5
 [LOCAL PROPERTIES]
 # Save file for progress
 SAVE = frontier.shelve
+
+[REPORT PROPERTIES]
 # Token file for progress
 TOKENS = tokens.shelve
+# File to store the max word count page
+WORD_COUNT = word_count.shelve
+# File to store the number of subdomains of ics.uci.edu
+SUBDOMAINS = subdomains.shelve
 
 # IMPORTANT: DO NOT CHANGE IT IF YOU HAVE NOT IMPLEMENTED MULTITHREADING.
 THREADCOUNT = 1
